# FastAPIPostSql

./: .env  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
.github/workflow/: main.YAML
.github/workflows/: main.YAML  node.js.yml
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/app_test/unit/: conftest.py
backend/app_test/unit/configutation/: test_pokemon_config.py
backend/app_test/unit/database/: fixture_pokemon_db.py  test_pokemon_db.py
backend/app_test/unit/services/: fixture_pokemon_service.py  test_pokemon_folder_service.py  test_pokemon_service.py
backend/migrations/: env.py
backend/migrations/versions/: b8f6e85fa7be_.py  d6110c5c3f4c_.py
backend/src/: Dockerfile  db.py  main.py  models.py
backend/src/core/: __init__.py  app_config.py  pokemon_config.py
backend/src/database/: db.py  pokemon.py
backend/src/images/monsters/Aquaceratops_2/user_data/: data_user.json
backend/src/response_models/: __init__.py  models.py
backend/src/routes/: pokemon.py
backend/src/services/: ai_services.py  firebase_service.py  pokemon_crud.py  pokemon_folder_service.py  pokemon_full.py  pokemon_generation.py  pokemon_image_generation.py  pokemon_service.py  pokemon_utils.py  prompts.py
backend/src/utils/: __init__.py  generic.py  image_utils.py  pokemon_utils.py
backend/src/web/: pokemon.py  pokemon_folder.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  api.ts  config.ts
frontend/src/api/: monsterServices.ts
src/backend/: db.py  main.py  models.py
(+14 files in other folders)
