[project]
name = "backend"
version = "0.1.0"
description = "\"An API for creating sprite\""
authors = [
    {name = "Luciano Bermudez",email = "lberm007@ucr.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.1.0,<3.0.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "pydantic (>=2.11.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
